deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploymentnodeapi
  labels:
    app: backendnodeapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backendnodeapi
  template:
    metadata:
      labels:
        app: backendnodeapi
    spec:
      containers:
        - name:  backendnodeapi
          image:  manoelvsneto/nodeapi
          ports:
            - containerPort: 8080
