service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-servicenodeapi
spec:
  selector:
    app: backendnodeapi
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 32033
      protocol: TCP
  type: NodePort
